--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/Ishitwa.png" alt="Profile picture"></td>
+      <td><img src="Images/Ishitwa.png" alt="Profile picture"></td>
       <td>
         <h1>Ishitwa Chakraborty</h1>
         <p> <em> Student of<strong> HIT-K</strong> </em> </p>
